ajustes para conseguir acesar o site atraves do github.io

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <title>Curso de HTML e CSS</title>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Pacifico|Roboto+Slab:400,700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/estilo.css">
+        <link rel="stylesheet" href="./css/normalize.css">
+        <link rel="stylesheet" href="./css/estilo.css">
     </head>
     <body>
         <nav>
@@ -51,23 +51,23 @@
         </section>
         <section id="portifolio">
             <h2>PORTIFOLIO</h2>
-                <img src="img/portfolio-1.jpg" alt="Cogumelos">            
-                <img src="img/portfolio-2.jpeg" alt="Sol no Horizonte">            
-                <img src="img/portfolio-3.jpeg" alt="Pessoas a beira de vale">            
-                <img src="img/portfolio-4.jpg" alt="Floresta nevada">
-                <img src="img/portfolio-5.jpeg" alt="Praia deserta">
-                <img src="img/portfolio-6.jpeg" alt="Alce a beira de rio">            
+                <img src="./img/portfolio-1.jpg" alt="Cogumelos">            
+                <img src="./img/portfolio-2.jpeg" alt="Sol no Horizonte">            
+                <img src="./img/portfolio-3.jpeg" alt="Pessoas a beira de vale">            
+                <img src="./img/portfolio-4.jpg" alt="Floresta nevada">
+                <img src="./img/portfolio-5.jpeg" alt="Praia deserta">
+                <img src="./img/portfolio-6.jpeg" alt="Alce a beira de rio">            
         </section>
 
         <section id="contato">
             <h2>CONTATOS</h2>
             <p>Entre em contato conosco.</p>
             <div>
-                <img src="img/fone.png" alt="telefone">
+                <img src="./img/fone.png" alt="telefone">
                 <p><a href="tel:xx55555555">(xx)5555 5555</a></p>
             </div>
             <div>
-                <img src="img/contato.png" alt="email">
+                <img src="./img/contato.png" alt="email">
                 <p><a href="gabrielnascimento.2@hotmail.com">gabrielnascimento.2@hotmail.com</a></p>
             </div>
         </section>
