ajuste no caminho do diretorio das imagens usados pela pagina

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         <section id="servicos">
             <h2>SERVICOS</h2>
             <div>
-                <img src="img/configs.png" alt="Engrenagens">
+                <img src="./img/configs.png" alt="Engrenagens">
                 <h3>Facil Integração</h3>
                 <p>Integra facilmente seu site a qualquer gerenciador de conteúdo.</p>
             </div>
             <div>
-                <img src="img/Hospedagem.png" alt="Servidor">
+                <img src="./img/Hospedagem.png" alt="Servidor">
                 <h3>Hospedagem Moderna</h3>
                 <p>Não deixe seus clientes na mão. Tenha seu site 24hrs no ar.</p>
             </div>
