ajuste no caminho dos diretorios da imagem da pagina

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
                 <p>Não deixe seus clientes na mão. Tenha seu site 24hrs no ar.</p>
             </div>
             <div>
-                <img src="img/site.png" alt="Navegador">
+                <img src="./img/site.png" alt="Navegador">
                 <h3>Melhores Práticas</h3>
                 <p>Código legivel, desenvolvido com as melhores práticas.</p>
             </div>
             <div>
-                <img src="img/coracao.png" alt="Coração">
+                <img src="./img/coracao.png" alt="Coração">
                 <h3>Feito com Amor</h3>
                 <p>E melhor fazer seus sites com amor hoje em dia!</p>
             </div>
