--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p>Integra facilmente seu site a qualquer gerenciador de conteúdo.</p>
             </div>
             <div>
-                <img src="./img/Hospedagem.png" alt="Servidor">
+                <img src="./img/hospedagem.png" alt="Servidor">
                 <h3>Hospedagem Moderna</h3>
                 <p>Não deixe seus clientes na mão. Tenha seu site 24hrs no ar.</p>
             </div>
